--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -10,11 +10,13 @@ spring.eventstore-datasource.username=user
 spring.eventstore-datasource.password=password
 spring.eventstore-datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.hikari.connectionTimeout=30000 
-spring.datasource.hikari.idleTimeout=600000 
-spring.datasource.hikari.maxLifetime=1800000 
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.minimum-idle=1
+#spring.datasource.hikari.connectionTimeout=30000 
+#spring.datasource.hikari.idleTimeout=600000 
+#spring.datasource.hikari.maxLifetime=1800000 
+#spring.datasource.hikari.maximum-pool-size=20
+#spring.datasource.hikari.minimum-idle=1
 
-spring.rabbitmq.listener.simple.prefetch=1
+spring.rabbitmq.listener.simple.prefetch=250
+spring.rabbitmq.listener.simple.max-concurrency=20
+spring.rabbitmq.listener.simple.concurrency=10
 spring.rabbitmq.listener.simple.default-requeue-rejected=false
