delete item.sql add product_mapping.sql

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -82,6 +82,28 @@
 			<version>3.4.4</version>
 		</dependency>	
 		<dependency>
+			<groupId>com.mekari.mokaaddons</groupId>
+			<artifactId>mokaaddons-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>	
+		<dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+        </dependency>		
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
+		</dependency>		
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -90,12 +112,7 @@
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.mekari.mokaaddons</groupId>
-			<artifactId>mokaaddons-common</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>	
+		</dependency>		
 	</dependencies>
 
 	<build>
