--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 
-spring.datasource.url=jdbc:mysql://localhost/eventstore_db?serverTimezone=UTC
-spring.datasource.username=user
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.mokaadons-datasource.jdbcUrl=jdbc:mysql://localhost/mokaaddons_db?serverTimezone=UTC
+spring.mokaadons-datasource.username=user
+spring.mokaadons-datasource.password=password
+spring.mokaadons-datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+spring.eventstore-datasource.jdbc-url=jdbc:mysql://localhost/eventstore_db?serverTimezone=UTC
+spring.eventstore-datasource.username=user
+spring.eventstore-datasource.password=password
+spring.eventstore-datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.hikari.connectionTimeout=30000 
 spring.datasource.hikari.idleTimeout=600000 
 spring.datasource.hikari.maxLifetime=1800000 
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=1
-
 #spring.jackson.serialization.write-dates-as-timestamps=false
 #spring.jackson.deserialization.adjust-dates-to-context-time-zone=false
