--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -87,6 +87,28 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.4</version>
 		</dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+        </dependency>		
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
+		</dependency>		
+		<dependency>
+			<groupId>com.mekari.mokaaddons</groupId>
+			<artifactId>mokaaddons-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -96,11 +118,6 @@
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.mekari.mokaaddons</groupId>
-			<artifactId>mokaaddons-common</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
 		</dependency>	
 	</dependencies>
 	<build>
