--- a/api/pom.xml
+++ b/api/pom.xml
@@ -102,6 +102,10 @@
 			<groupId>org.javatuples</groupId>
 			<artifactId>javatuples</artifactId>
 			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
 		</dependency>		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
